Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-02-15 (SVN):
    * vid_sdl.c, gl_vidsdl.c (VID_SetIcon): disabled the embedded icon
      for osx builds. thanks to Kristian Duske for clarifications.
    * updated version date stamp to 2013-02-15.

2013-02-14 (SVN):
    * GL_SetupLightmapFmt: remove the check_cmdline function parameter
      and rely on the global host_initialized, instead.

2013-02-14 (SVN):
    * new icon for mac os x, thanks to Jacques Krige.

2013-02-14 (SVN):
    * rpm spec file: minor edit.
    * engine/resource: renamed titles in the xbm headers to hx2icon.
      remove the unused 64x64 h2 icons. remove unused hw png icons.
    * vid_sdl.c, gl_vidsdl.c (VID_SetIcon): document xbm processing.
      adjust for the renamed xbm titles.

2013-02-12 (SVN):
    * updated config.guess and config.sub from savannah git repo.

2013-02-11 (SVN):
    * h2patch: if we run into oem (m3d) version 1.08, request feedback
      from the user. likewise for the gtk-launcher patch unit.

2013-02-10 (SVN):
    * timidity: minor edits for byte order macro checks.

2013-02-10 (SVN):
    * common/q_endian.h: updated with addidional predef.sourceforge.net
      information.

2013-02-10 (SVN):
    * timidity: removed read_meta_data() stuff altogether.
    * timidity: documented our changes in the CHANGES file.

2013-02-10 (SVN):
    * utils, hcc: fixed a _Wclobbered warning in CO_CompileFile() by
      making the local boolean inProgress variable volatile.

2013-02-10 (SVN):
    * timidity: fixed all of the gcc -Wclobbered warnings by fixing my
      setjmp/longjmp mistakes including one major thinko in readconfig
      recursive calls. made safe_malloc() to 0-fill the memory before
      returning. changed sine() macro to use standart M_PI instead of
      PI. removed the unused PATH_SEP macro from options.h. defined a
      new TIM_MAXPATH, expanding to MAXPATHLEN or PATH_MAX if they are