@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2013-02-15 (SVN):
+    * in_amiga.c: native digital joystick support from Szilard Biro.
+
+2013-02-15 (SVN):
     * vid_sdl.c, gl_vidsdl.c (VID_SetIcon): disabled the embedded icon
       for osx builds. thanks to Kristian Duske for clarifications.
     * updated version date stamp to 2013-02-15.
